# OBSTimeStampTracker

./: .gitignore  ObsTimeStamps2-28-26.txt  README.md  installer.iss  pyproject.toml
.obsidian/: workspace.json
OBSDiscordButton/: ObsTimeStamps2-28-26 (1).json  ObsTimeStamps2-28-26.json  ObsTimeStamps4-18-25 (1).txt  ObsTimeStamps4-18-25 (2).txt  ObsTimeStamps4-18-25 (4).txt  ObsTimeStamps4-18-25.txt  ObsTimeStamps4-28-25 (2).txt  ObsTimeStamps4-28-25 (4).txt  ObsTimeStamps4-28-25.txt  ObsTimeStamps8-9-25 (1).txt  ObsTimeStamps8-9-25 (2).txt  ObsTimeStamps8-9-25 (3).txt  ObsTimeStamps8-9-25 (4).txt  ObsTimeStamps8-9-25.txt  config.json  script.py  script.spec
OBSDiscordButton/config/: config.json
